test/rules/ok/rrewrite_oracle_01.zc
adversary A : () -> ().
oracle O : Fq -> Fq.

prove [
  y <-$ Fq;
  () <- A() with
    O(x) = [ y + x | x = y ];
] : y = y.
rrewrite_oracle (2,1,1) ->.
rrewrite_oracle (2,1,1) <-.
print_goals : t2.