test/rules/fail/radd_test_02.zc
(*  *)
adversary A : () -> ().
oracle O : Fq -> Fq.

prove [
  y <-$ Fq;
  () <- A() with
    O(x) = [ x | true ];
] : true.
radd_test (2,1,1) (x = y) A1 x' y'.
print_goals : t.